fix: export menu item in list view, now correct vertical align (PR #379 Fixes #367)

--- a/src/renderer/assets/styles/myBooks.css
+++ b/src/renderer/assets/styles/myBooks.css
@@ -215,8 +215,6 @@ main {
     }
 
 	& span {
-		display: flex;
-		align-items: center;
 		& label {
 			cursor: pointer;
 
